<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="29dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_profile"
                style="@style/TextContent.TitleMedium"
                android:text="@string/my_profile"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                style="@style/ImageView"
                android:contentDescription="@string/afif_imam"
                android:src="@drawable/foto_profile"
                app:layout_constraintBottom_toTopOf="@+id/tv_nama_lengkap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

            <TextView
                android:id="@+id/tv_nama_lengkap"
                style="@style/TextContent.Paragraf"
                android:text="@string/nama_lengkap"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/tv_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/TextContent.Paragraf"
                android:text="@string/email"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/tv_nim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama_lengkap" />

            <TextView
                android:id="@+id/tv_nim"
                style="@style/TextContent.Paragraf"
                android:text="@string/nim"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/tv_prodi_angkatan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_prodi_angkatan"
                style="@style/TextContent.Paragraf"
                android:text="@string/prodi_angkatan"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/tv_fakultas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_nim" />

            <TextView
                android:id="@+id/tv_fakultas"
                style="@style/TextContent.Paragraf"
                android:text="@string/fakultas"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/tv_univeritas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_prodi_angkatan" />

            <TextView
                android:id="@+id/tv_univeritas"
                style="@style/TextContent.Paragraf"
                android:text="@string/universitas"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/btn_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fakultas" />

            <Button
                android:id="@+id/btn_share"
                style="@style/ButtonGeneral.Share"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_univeritas" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
