<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:text="@string/tentang_nba" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/foto_tentang_nba"
        android:scaleType="fitCenter"
        android:src="@drawable/adam_silver" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:text="@string/isi_tentang_nba"/>
</LinearLayout>