<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    tools:context="ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_profile"
        style="@style/TextContent.TitleMedium"
        android:text="@string/my_app"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/ImageView"
        android:contentDescription="@string/afif_imam"
        android:src="@drawable/nba"
        app:layout_constraintBottom_toTopOf="@+id/tv_dekripsi_nba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

    <TextView
        android:id="@+id/tv_dekripsi_nba"
        style="@style/TextContent.Paragraf"
        android:textAlignment="center"
        android:text="@string/deskrpsi_nba"
        app:layout_constraintBottom_toTopOf="@+id/btn_tentang_nba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <Button
        android:id="@+id/btn_tentang_nba"
        style="@style/ButtonGeneral.NBA"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:text="@string/more_about_nba"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dekripsi_nba" />



</androidx.constraintlayout.widget.ConstraintLayout>